2008-07-13  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/deinterlace2/tvtime/greedyh.asm:
	* gst/deinterlace2/tvtime/greedyh.c:
	* gst/deinterlace2/tvtime/greedyhmacros.h:
	Some cleanup, use 3DNOW instead of TDNOW in macros.

	* gst/deinterlace2/tvtime/tomsmocomp.c:
	(gst_deinterlace_method_tomsmocomp_class_init):
	* gst/deinterlace2/tvtime/tomsmocomp/TomsMoCompAll.inc:
	* gst/deinterlace2/tvtime/tomsmocomp/tomsmocompmacros.h:
	The SSE method in fact only needs MMXEXT, declare it as such.

2008-07-11  Jan Schmidt  <thaytan@noraisin.net>

	* docs/plugins/.cvsignore:
	Ignore *-undeclared.txt

	* ext/resindvd/rsnaudiomunge.c:
	Turn g_print's into debug statements.

	* ext/resindvd/resin-play:
	* ext/resindvd/Makefile.am:
	* ext/resindvd/resindvdbin.c:
	* ext/resindvd/resindvdbin.h:
	* ext/resindvd/rsnparsetter.c:
	* ext/resindvd/rsnparsetter.h:
	* ext/resindvd/rsnwrappedbuffer.c:
	* ext/resindvd/rsnwrappedbuffer.h:
	Add a bloated implementation of a really simple idea: Replace the
	pixel-aspect-ratio in the output video with a prescribed one when
	necessary. There must be an easier way.

	Split the dvdspu out of the resindvdbin and put out the subpicture
	stream on the subpicture pad.

	* ext/resindvd/gstmpegdemux.c:
	Send video-aspect events down the pipe from the demuxer.

	* ext/resindvd/resindvdsrc.c:
	* ext/resindvd/resindvdsrc.h:
	Handle timed-stills somewhat using g_cond_timed_wait, with a FIXME
	to make it use clock-waiting later.

	* ext/resindvd/rsnbasesrc.c:
	Don't overwrite the last_stop in the basesrc segment after a seamless
	seek.

2008-07-10  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* gst/mpegtsparse/mpegtspacketizer.c:
	Convert extended event text to UTF-8.

2008-07-10  Stefan Kost  <ensonic@users.sf.net>

	* docs/plugins/Makefile.am:
	* docs/plugins/gst-plugins-bad-plugins-docs.sgml:
	* docs/plugins/gst-plugins-bad-plugins-sections.txt:
	* docs/plugins/gst-plugins-bad-plugins.args: